--- a/conference-stepengine/build.gradle
+++ b/conference-stepengine/build.gradle
@@ -1,7 +1,7 @@
 /*
  * The MIT License (MIT)
  *
- * Copyright (c) 2015-2022 TweetWallFX
+ * Copyright (c) 2015-2023 TweetWallFX
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -21,6 +21,8 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+apply plugin: 'org.openjfx.javafxplugin'
+
 dependencies {
     api project(':tweetwallfx-conference-api')
 
@@ -29,4 +31,8 @@ dependencies {
     implementation project(':tweetwallfx-controls')
     implementation project(':tweetwallfx-stepengine-dataproviders')
     implementation project(':tweetwallfx-transitions')
+}
+
+javafx {
+    modules = [ 'javafx.graphics' ]
 }
