Fixed more module problems

--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ allprojects {
 
     repositories {
         mavenCentral()
-        jcenter()
+        mavenLocal()
     }
 
     // configuring Spotless
