--- a/controls/build.gradle
+++ b/controls/build.gradle
@@ -21,6 +21,7 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+apply plugin: 'org.openjfx.javafxplugin'
 
 dependencies {
     implementation 'com.github.mfornos:humanize-slim:1.2.2'
@@ -31,4 +32,8 @@ dependencies {
     implementation project(':tweetwallfx-emoji')
     implementation project(':tweetwallfx-stepengine-dataproviders')
     implementation project(':tweetwallfx-transitions')
+}
+
+javafx {
+    modules = [ 'javafx.controls', 'javafx.graphics' ]
 }
