Adds basic MQTT support with remote events
- adds short cut to signal restart on rc 42
- adds heartbeat over mqtt

Signed-off-by: Patrick Reinhart <patrick@reini.net>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -232,6 +232,20 @@ updates:
 
   - package-ecosystem: "gradle"
     # Any gradle based dependencies
+    directory: "/mqtt"
+    # Raise pull requests for version updates on `master` branch
+    target-branch: "master"
+    schedule:
+      interval: "daily"
+      # Check for npm updates at 0815hrs UTC
+      time: "08:15"
+    reviewers:
+      - "TweetWallFX/tweetwallfx-admins"
+    # Allow up to N open pull requests (independant of source)
+    open-pull-requests-limit: 50
+
+  - package-ecosystem: "gradle"
+    # Any gradle based dependencies
     directory: "/stepengine-dataproviders"
     # Raise pull requests for version updates on `master` branch
     target-branch: "master"
