Add java platform to rootproject and use it for shared versions

--- a/2d/build.gradle
+++ b/2d/build.gradle
@@ -23,6 +23,7 @@
  */
 
 dependencies {
+    implementation 'org.slf4j:slf4j-api'
     implementation project(':tweetwallfx-configuration')
     implementation project(':tweetwallfx-controls')
 }
