--- a/conference-test/build.gradle
+++ b/conference-test/build.gradle
@@ -28,10 +28,11 @@ configurations {
 dependencies {
     api project(':tweetwallfx-conference-api')
 
-    implementation 'jakarta.ws.rs:jakarta.ws.rs-api:3.1.0'
+    implementation 'jakarta.ws.rs:jakarta.ws.rs-api'
+    implementation 'org.slf4j:slf4j-api'
 
-    runtimeOnly 'org.glassfish.jersey.core:jersey-client:3.1.1'
-    runtimeOnly 'org.glassfish.jersey.inject:jersey-hk2:3.1.1'
-    runtimeOnly 'org.glassfish.jersey.media:jersey-media-json-jackson:3.1.1'
-    runtimeOnly 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.0'
+    runtimeOnly 'org.glassfish.jersey.core:jersey-client'
+    runtimeOnly 'org.glassfish.jersey.inject:jersey-hk2'
+    runtimeOnly 'org.glassfish.jersey.media:jersey-media-json-jackson'
+    runtimeOnly 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 }
