--- a/controls/build.gradle
+++ b/controls/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'de.jensd:fontawesomefx-commons:11.0'
     implementation 'de.jensd:fontawesomefx-fontawesome:4.7.0-11'
     implementation 'io.github.encryptorcode:pluralize:1.0.0'
+    implementation 'org.slf4j:slf4j-api'
     implementation project(':tweetwallfx-core')
     implementation project(':tweetwallfx-emoji')
     implementation project(':tweetwallfx-stepengine-dataproviders')
