--- a/generic2d/build.gradle
+++ b/generic2d/build.gradle
@@ -23,9 +23,11 @@
  */
 
 dependencies {
-    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
     implementation project(':tweetwallfx-2d')
     implementation project(':tweetwallfx-mqtt')
     implementation project(':tweetwallfx-tweet-api')
-    runtimeOnly 'org.apache.logging.log4j:log4j-slf4j2-impl:2.20.0'
+    implementation 'org.apache.logging.log4j:log4j-core'
+    implementation 'org.slf4j:slf4j-api'
+
+    runtimeOnly 'org.apache.logging.log4j:log4j-slf4j2-impl'
 }
