--- a/stepengine-dataproviders/build.gradle
+++ b/stepengine-dataproviders/build.gradle
@@ -25,4 +25,7 @@
 dependencies {
     api project(':tweetwallfx-cache')
     api project(':tweetwallfx-stepengine-api')
+
+    implementation 'com.github.spotbugs:spotbugs-annotations'
+    implementation 'org.slf4j:slf4j-api'
 }
