--- a/util/build.gradle
+++ b/util/build.gradle
@@ -23,7 +23,6 @@
  */
 
 dependencies {
-    implementation 'org.eclipse:yasson:3.0.3'
-
-    testImplementation 'org.assertj:assertj-core:3.24.2'
+    implementation 'org.eclipse:yasson'
+    implementation 'org.slf4j:slf4j-api'
 }
