Fix issues generated by projectHealth concerning dependency configurations.
Either by changing the configuration in which the dependency is declared or
by fixing the (wrong) exposure of non-api classes.

--- a/build.gradle
+++ b/build.gradle
@@ -190,7 +190,9 @@ allprojects {
             javafx {
                 description = 'Java FX libraries'
             }
-            jaxb
+            jaxb {
+                description = 'JAXB libraries'
+            }
 
             all {
                 resolutionStrategy.eachDependency { DependencyResolveDetails details ->
