--- a/mqtt/build.gradle
+++ b/mqtt/build.gradle
@@ -23,7 +23,8 @@
  */
 
 dependencies {
-    implementation project(':tweetwallfx-configuration')
+    api project(':tweetwallfx-configuration')
+
     implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
     implementation 'org.slf4j:slf4j-api'
 }
