--- a/tweet-impl-mastodon4j/build.gradle
+++ b/tweet-impl-mastodon4j/build.gradle
@@ -25,9 +25,10 @@
 dependencies {
     api project(':tweetwallfx-tweet-api')
 
+    implementation 'org.json:json:20230227' // explicit declaration to avoid CVE-2022-45688
     implementation 'org.jsoup:jsoup:1.16.1'
     implementation 'org.mastodon4j:mastodon4j-core:0.9.0'
     implementation 'org.slf4j:slf4j-api'
 
-    testImplementation 'org.simplify4u:slf4j2-mock'
+    testRuntimeOnly 'org.simplify4u:slf4j2-mock'
 }
