--- a/util/build.gradle
+++ b/util/build.gradle
@@ -23,6 +23,8 @@
  */
 
 dependencies {
-    implementation 'org.eclipse:yasson'
+    implementation 'jakarta.json.bind:jakarta.json.bind-api:3.0.0'
     implementation 'org.slf4j:slf4j-api'
+
+    runtimeOnly 'org.eclipse:yasson'
 }
