--- a/build.gradle
+++ b/build.gradle
@@ -386,7 +386,7 @@ allprojects {
     }
 }
 
-if (System.env.CI) {
+if (extensions.findByName('buildScan')) {
     buildScan {
         termsOfServiceUrl = 'https://gradle.com/terms-of-service'
         termsOfServiceAgree = 'yes'
