Updated and Synched project config

--- a/build.gradle
+++ b/build.gradle
@@ -67,9 +67,9 @@ allprojects {
     int[] versionSplit = currentVersion.split('[.]').collect{it as int}
     assert 3 == versionSplit.length : 'currentVersion property requires all three version parts (major, minor, patch)'
 
-    group = 'org.tweetwallfx'
+    group = mavenGroupName
     version = String.format('release' == System.getenv('GITHUB_REF_NAME') ? '%d.%d.%d' : '%d.%d-SNAPSHOT', versionSplit)
-    description = 'JavaFX based Tweetwall (' + name + ')'
+    description = "${projectDescriptionBase} (${name})"
 
     repositories {
         mavenCentral()
@@ -91,6 +91,7 @@ allprojects {
             format 'textBasedFiles', {
                 target(
                     '*.gradle',
+                    '**/*.gradle',
                     '**/*.asciidoc',
                     '**/*.adoc',
                     '**/*.asc',
@@ -100,10 +101,14 @@ allprojects {
                     '**/*.properties',
                     '.gitignore',
                 )
+                targetExclude(
+                    '.*/**',
+                )
 
                 trimTrailingWhitespace()
                 indentWithSpaces(4)
                 endWithNewline()
+                replaceRegex 'noMultipleEmptyLines', '\n{3,}', '\n\n'
             }
 
             def closure = {
@@ -112,8 +117,12 @@ allprojects {
                 endWithNewline()
 //                importOrder(
 //                    '\\#',    // static imports
+//                    'com',   // classes from com root package
 //                    'java',   // classes from java root package
+//                    'javafx',  // classes from javafx root package
 //                    'javax',  // classes from javax root package
+//                    'jakarta',  // classes from javax root package
+//                    'org',  // classes from org root package
 //                    '',       // any other import
 //                )
                 replaceRegex 'noStarImports', /\nimport (static )?[a-zA-Z0-9.]*[.][\*];\n/, '\n'
@@ -122,7 +131,7 @@ allprojects {
                 replaceRegex 'Remove trailing empty comment lines.', '\n\\s*\\*(\n\\s*\\*/\n)', '$1'
                 replaceRegex 'Remove empty javadoc', '\n\\s*/\\*\\*\n\\s*\\*/\n', '\n\n'
                 replaceRegex 'Remove empty lines before end of block', '\\n[\\n]+(\\s*})(?=\\n)', '\n$1'
-                licenseHeaderFile rootProject.file('LICENSE.spotlessTemplate')
+                licenseHeaderFile rootProject.file('LICENSE.spotlessJavaTemplate')
             }
 
             if (plugins.hasPlugin(GroovyPlugin)) {
@@ -206,6 +215,11 @@ allprojects {
 */
                 }
             }
+
+            compileOnly {
+                extendsFrom configurations.javafx
+            }
+
             testFramework {
                 description = 'Libraries for testing'
                 // exclude old junit api
@@ -245,8 +259,8 @@ allprojects {
                     'jakarta.activation',
                     'jakarta.xml.bind',
                     'javafx.controls',
+                    'javafx.fxml',
                     'javafx.graphics',
-                    'javafx.fxml'
                 ].toUnique().toSorted().join(',')
             }
         }
