--- a/build.gradle
+++ b/build.gradle
@@ -350,7 +350,7 @@ allprojects {
                 html.required.set(true)
             }
 
-            auxClassPaths = auxClassPaths + configurations.javafx + configurations.jaxb
+            auxClassPaths from configurations.javafx + configurations.jaxb
         }
 
         // configuring Versions plugin
