Activate local build cache

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,5 +26,8 @@ mavenGroupName=org.tweetwallfx
 currentVersion=2.0.0
 projectDescriptionBase=JavaFX based Tweetwall
 
+# properties for gradle process
+org.gradle.caching=true
+
 # properties configuring build
 executeConferenceClientLiveTests=false
