--- a/.github/workflows/dependencyUpdates.yml
+++ b/.github/workflows/dependencyUpdates.yml
@@ -32,11 +32,11 @@ jobs:
         uses: gradle/wrapper-validation-action@v2.1.1
 
       # Setup JDK environment for the next steps
-      - name: Setup JDK 17
+      - name: Setup JDK 21
         uses: actions/setup-java@v4.0.0
         with:
           distribution: 'temurin'
-          java-version: '17'
+          java-version: '21'
           cache: gradle
 
       # Run dependencyUpdates task
@@ -55,6 +55,7 @@ jobs:
 
       # Run dependency-analysis task
       - name: Run dependency-analysis task
+        if: false
         uses: gradle/gradle-build-action@v3.1.0
         with:
           arguments: --no-daemon --refresh-dependencies --scan buildHealth
