--- a/build.gradle
+++ b/build.gradle
@@ -228,10 +228,10 @@ allprojects {
             // get recommended versions from the platform project
             api platform(rootProject)
 
-            javafx group: 'org.openjfx', name: 'javafx-base', version: '21.0.2', classifier: javaFxPlatform
-            javafx group: 'org.openjfx', name: 'javafx-graphics', version: '21.0.2', classifier: javaFxPlatform
-            javafx group: 'org.openjfx', name: 'javafx-fxml', version: '21.0.2', classifier: javaFxPlatform
-            javafx group: 'org.openjfx', name: 'javafx-controls', version: '21.0.2', classifier: javaFxPlatform
+            javafx group: 'org.openjfx', name: 'javafx-base', version: '22-ea+28', classifier: javaFxPlatform
+            javafx group: 'org.openjfx', name: 'javafx-graphics', version: '22-ea+28', classifier: javaFxPlatform
+            javafx group: 'org.openjfx', name: 'javafx-fxml', version: '22-ea+28', classifier: javaFxPlatform
+            javafx group: 'org.openjfx', name: 'javafx-controls', version: '22-ea+28', classifier: javaFxPlatform
 
             jaxb 'jakarta.activation:jakarta.activation-api:2.1.3'
             jaxb 'org.eclipse.angus:angus-activation:2.0.2'
