--- a/.github/workflows/gradleBuild.yml
+++ b/.github/workflows/gradleBuild.yml
@@ -26,6 +26,7 @@ jobs:
       matrix:
         jdk:
           - '21'
+          - '22'
         distribution:
           - 'zulu'
 
@@ -53,7 +54,7 @@ jobs:
       - name: Run assemble tasks with toolchain JDK ${{ matrix.jdk }}
         uses: gradle/gradle-build-action@v3.4.2
         with:
-          arguments: --no-daemon --refresh-dependencies --scan --warning-mode all assemble
+          arguments: --no-daemon --refresh-dependencies --scan --warning-mode all --stacktrace assemble
 
       # Run test tasks
       - name: Run test tasks with toolchain JDK ${{ matrix.jdk }}
