--- a/build.gradle
+++ b/build.gradle
@@ -402,8 +402,8 @@ allprojects {
 
 if (extensions.findByName('buildScan')) {
     buildScan {
-        termsOfServiceUrl = 'https://gradle.com/terms-of-service'
-        termsOfServiceAgree = 'yes'
+        termsOfUseUrl = 'https://gradle.com/terms-of-service'
+        termsOfUseAgree = 'yes'
     }
 }
 
