--- a/.github/workflows/dependencyUpdates.yml
+++ b/.github/workflows/dependencyUpdates.yml
@@ -27,10 +27,6 @@ jobs:
       - name: Fetch Sources
         uses: actions/checkout@v4.1.7
 
-      # Validate wrapper
-      - name: Gradle Wrapper Validation
-        uses: gradle/wrapper-validation-action@v3.4.2
-
       # Setup JDK environment for the next steps
       - name: Setup JDK 21
         uses: actions/setup-java@v4.2.1
@@ -39,11 +35,15 @@ jobs:
           java-version: '21'
           cache: gradle
 
+      # Setup gradle
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3.4.2
+        with:
+          validate-wrappers: true
+
       # Run dependencyUpdates task
       - name: Run dependencyUpdates task
-        uses: gradle/gradle-build-action@v3.4.2
-        with:
-          arguments: --no-daemon --refresh-dependencies --scan dependencyUpdates
+        run: ./gradlew --no-daemon --refresh-dependencies --scan dependencyUpdates
 
       # Store dependencyUpdates result files
       - name: Store dependencyUpdates result files
@@ -55,9 +55,7 @@ jobs:
 
       # Run dependency-analysis task
       - name: Run dependency-analysis task
-        uses: gradle/gradle-build-action@v3.4.2
-        with:
-          arguments: --no-daemon --refresh-dependencies --scan buildHealth
+        run: ./gradlew --no-daemon --refresh-dependencies --scan buildHealth
 
       # Store dependency-analysis result files
       - name: Store dependency-analysis result files
