Added spotbugs plugin for enhanced security checks

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 /*
  * The MIT License (MIT)
  *
- * Copyright (c) 2015-2023 TweetWallFX
+ * Copyright (c) 2015-2024 TweetWallFX
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -353,6 +353,10 @@ allprojects {
                 }
 
                 auxClassPaths.from(configurations.javafx, configurations.jaxb)
+            }
+
+            dependencies {
+                spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.13.0'
             }
         }
 
