--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -31,7 +31,7 @@ updates:
       time: "08:15"
     reviewers:
        - "TweetWallFX/tweetwallfx-admins"
-    # Grouped Update PRs
+    # Group Update PRs
     groups:
       javafx:
         patterns:
