Corrected hosting base url of emoji images

--- a/emoji/src/main/resources/tweetwallConfig.json
+++ b/emoji/src/main/resources/tweetwallConfig.json
@@ -24,5 +24,8 @@
                 ]
             }
         }
+    },
+    "EmojiImageCache": {
+        "emojiImageBaseUrl": "https://cdnjs.cloudflare.com/ajax/libs/twemoji/15.1.0/72x72"
     }
 }
