--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -329,6 +329,20 @@ updates:
       # Check for npm updates at 0815hrs UTC
       time: "08:15"
     reviewers:
+      - "TweetWallFX/tweetwallfx-admins"
+    # Allow up to N open pull requests (independant of source)
+    open-pull-requests-limit: 50
+
+  - package-ecosystem: "gradle"
+    # Any gradle based dependencies
+    directory: "/tweet-impl-mock"
+    # Raise pull requests for version updates on `master` branch
+    target-branch: "master"
+    schedule:
+      interval: "daily"
+      # Check for npm updates at 0815hrs UTC
+      time: "08:15"
+    reviewers:
        - "TweetWallFX/tweetwallfx-admins"
     # Allow up to N open pull requests (independant of source)
     open-pull-requests-limit: 50
